# earthquake-intelligence

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Expression.cal  README.md  classification_range.md  docker-compose.yml  main.py  pyproject.toml  schema.sql  start.bat  todos-ui.md  todos.md
data/PAK_Faults/: Major_Faults.dbf  Major_Faults.sbn  Major_Faults.sbx  Major_Faults.shp  Major_Faults.shp.xml  Major_Faults.shx  Minor_Faults.dbf  Minor_Faults.sbn  Minor_Faults.sbx  Minor_Faults.shp  Minor_Faults.shp.xml  Minor_Faults.shx
data/PAK_Tectoniz_Zones/: PAK_Tectonic_Zones.dbf  PAK_Tectonic_Zones.sbn  PAK_Tectonic_Zones.sbx  PAK_Tectonic_Zones.shp  PAK_Tectonic_Zones.shp.xml  PAK_Tectonic_Zones.shx
docs/superpowers/plans/: 2026-06-09-eq-intensity-platform.md  2026-06-09-event-catalog-impact-plan.md  2026-06-10-boundary-seismotectonic-datasets.md  (+4 more)
migrations/: 001_initial_schema.sql  002_add_usgs_fields.sql  003_sync_state.sql  004_usgs_detail.sql
scripts/: build_tiles.py  load_boundaries.py  load_districts.py  rasterize_vs30.py
src/eqmon/: __init__.py  _env.py  _proj.py  api.py  boundaries.py  config.py  contours.py  db.py  export.py  impact.py  intensity.py  vs30.py
tests/: conftest.py  test_api.py  test_boundaries.py  test_config.py  test_contours.py  test_db.py  test_events_api.py  test_impact.py  test_ingest.py  test_intensity.py  test_repo.py  test_scheduler.py  test_shapefile_export.py  test_sources.py  test_vs30.py
tests/fixtures/: met_sample.json  usgs_sample.json
web/: app.js  index.html  styles.css
(+12 files in other folders)
