[project]
name = "eqmonitoring2"
version = "0.1.0"
description = "Interactive earthquake MMI intensity platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "rasterio>=1.3",
    "fiona>=1.9",
    "pyproj>=3.6",
    "shapely>=2.0",
    "contourpy>=1.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
